# tiles

./: CHANGELOG.md  LICENSE  Makefile  pyproject.toml
notebooks/: demo.ipynb  solution1.npy  solution2.npy
tiles/: game.py  solver.py  view.py
tiles/config/: logging.py
