[tool.poetry]
name = "tiles"
authors = [
    "Luke Tonin <email@example.com>"
]
license = "MIT license"
version = "0.1.0"
description = "A simulation, simple UI and solver for a game of tiles."
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
bokeh="^2.4"
numpy="^1.2"

[tool.poetry.group.dev.dependencies] 
pytest = "^7.1"
black = "^22.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
